# hiacpu

./: .gitignore  .scalafmt.conf  Makefile  README.md  build.sc  common.sc  flake.nix  log.txt
configs/: HIA.json  HIAFormal.json  HIATestBench.json
doc/: add_direnv_support_for_chisel-nix.md  add_direnv_support_for_chisel-nix_cn.md  hiacpu.drawio
elaborator/src/: Elaborator.scala  HIA.scala  HIAFormal.scala  HIATestBench.scala
hia/: hiacpu.drawio
hia/src/: ALU.scala  BrCond.scala  Bundle.scala  CSR.scala  Cache.scala  Consts.scala  Control.scala  Core.scala  Datapath.scala  DecodeStage.scala  Decoder.scala  ExecuteStage.scala  FetchStage.scala  HIA.scala  HIACore.scala  HIAFormal.scala  HIATestBench.scala  ImmGen.scala  Instructions.scala  MemStage.scala  WriteBackStage.scala
hiadifftest/: Cargo.toml  default.nix
hiadifftest/offline/src/: difftest.rs
hiaemu/: Cargo.toml
hiaemu/src/: bus.rs  dpi.rs  drive.rs  lib.rs
nix/: overlay.nix
nix/dependencies/riscv-test-env/p/: riscv_test.h
nix/hia/: default.nix  dpi-lib.nix  hia.nix  vcs.nix  verilated.nix
nix/hia/scripts/: FPV.tcl  vcs-wrapper.sh
nix/pkgs/dependencies/_sources/: generated.json  generated.nix
